# FPL-Optimization-Tools

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  paths.py  pyproject.toml  requirements.txt  utils.py
.ipynb_checkpoints/: Dockerfile-checkpoint  docker-compose-checkpoint.yml
PBI/: fpl-optimization-dashboard.pbix
data/: Mikkel.csv  README.md  am_pts.csv  ben_2021_22.xlsx  ben_2022_23.xlsx  binary_fixture_settings.md  check_missing_players.csv  comprehensive_settings.json  final.csv  fplreview1.csv  fplreview10.csv  fplreview11.csv  fplreview12.csv  fplreview13.csv  fplreview14.csv  fplreview15.csv  fplreview16.csv  fplreview2.csv  fplreview3.csv  fplreview4.csv  fplreview5.csv  fplreview6.csv  fplreview7.csv  fplreview8.csv  fplreview9.csv  fplreview_12gws.csv  garz.csv  login.json.sample  regular_settings.json  regular_settings_wc.json  relevant_players_wc6.csv  team.json  team.json.sample  user_settings.json
dev/: data_parser.py  solver.py  visualization.py
excel/: Episode 1 - Goalkeeper_Problem.xlsx  Episode 2 - Single_Period_Final.xlsx  Episode 3 - Multi_Period_Final_Transfer_Hit.xlsx  Episode 4 - Wildcard with Impr.xlsx
model/: Simple Model.xlsx  adding_fixtures.ipynb  player_ev.xlsx  player_total_ev.xlsx  players.ipynb  predictions.ipynb  scrape_mins.ipynb  scrape_test.ipynb  teams.ipynb  test.ipynb
notebooks/: Bonus - FDR Rotation 2022-2023.ipynb  Bonus - FDR Rotation.ipynb  Optimal GK Planning.ipynb  Optimal Pairing.ipynb  Tutorial 1 - Goalkeeper Problem w Method.ipynb  Tutorial 1 - Goalkeeper Problem.ipynb  Tutorial 2 - Single Period FPL.ipynb
run/: .env  1 - login_download.py  2 - move_fplreview.py  2 - move_mikkel.py  3 - modify_review_8th_gw.py  WC30_FH34_FT_decay_review1.bat  WC30_FH34_review1-16.bat  WC30_FH37_review1-16.bat  WC31_FH34_review1-16.bat  WC31_FH37_review1-16.bat  binary_file_generator.py  inspect_csv.py  regular_settings.json  run_parallel.py  (+15 more)
(+96 files in other folders)
